Updated UI for ROI and new UI for cleanup.

--- a/plseg/environment.yml
+++ b/plseg/environment.yml
@@ -8,11 +8,8 @@ dependencies:
     - numpy
     - scipy
     - scikit-image
-    - jupyter
-    - ipywidgets
-    - matplotlib
-    - ipympl
-    - voila
+    - imageio
+    - Flask
     - tqdm
     - pip
     - pip:
